add graphic landing page

--- a/Epic_Trading/src/app/components/market/market.component.html
+++ b/Epic_Trading/src/app/components/market/market.component.html
@@ -64,10 +64,10 @@
 </div> -->
 
 
-<div class="container mt-4">
+<div class="container mt-4 ">
   <h2>Market Stock Actions</h2>
   <div class="table-responsive">
-    <table class="table">
+    <table class="table bannercontrolpanel">
       <thead>
         <tr>
           <th scope="col" class="d-none d-md-table-cell">Symbol</th>
