--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -1,9 +1,9 @@
 <!-- <button (click)="toggleFullscreen()">Visualizza a schermo intero</button> -->
 
 
-<header class="mb-5 sticky-top">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid ">
+<header class=" sticky-top ">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light navbarcontrolpanel p-2">
+    <div class="container-fluid navbarcontrolpanel ">
       <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
         <div  class="navbar-nav "   style=" margin-left:auto;">
         <!-- Aggiungi i bottoni "Login" e "Register" anche qui -->
         <button class="btn btn-light btn-sm ml-2">Login</button>
-        <button class="btn btn-primary btn-sm ml-2">Register</button>
+        <button class="btn bannercontrolpanel btn-sm ml-2 border-0">Register</button>
          </div>
        </div>
     </div>
@@ -35,24 +35,13 @@
 </header>
 
 
-
+<div class="header ">
 
  <!-- Hero Section -->
- <section class="hero  text-center py-5 d-flex justify-content-center align-items-center mb-5">
+ <section class="hero  text-center py-5 d-flex justify-content-center align-items-center mb-3">
   <div class="container-fluid">
     <h1>A trusted and secure market exchange.</h1>
-    <p class="mb-5">Our trading platform, EpicTrading, offers a cutting-edge user interface designed for seamless trading experiences. <br> With EpicTrading, you'll have access to a suite of powerful features. <br> Whether you're a seasoned trader or just getting started, EpicTrading has you covered for all your trading needs.</p>
-
-
-
-
-
-
-
-
-
-
-
+    <p class="mb-5 text-dark">Our trading platform, EpicTrading, offers a cutting-edge user interface designed for seamless trading experiences. <br> With EpicTrading, you'll have access to a suite of powerful features. <br> Whether you're a seasoned trader or just getting started, EpicTrading has you covered for all your trading needs.</p>
 
     <div class="row mb-3">
       <div class="col-md-6 mx-auto">
@@ -60,7 +49,7 @@
           <div class="form-group">
             <input type="email" class="form-control" id="emailInput" name="email" placeholder="Enter your email" [(ngModel)]="email">
           </div>
-          <button type="submit" class=" btn btn-primary btn-lg mt-3">Get Started</button>
+          <button type="submit" class=" btn bannercontrolpanel btn-lg mt-3 border-0">Get Started</button>
         </form>
       </div>
     </div>
@@ -70,9 +59,82 @@
 
 
 
+<!-- testo che ruota infinito -->
+<div class="marquee-container  py-4 bg-transparent"  >
+  <div class="marquee-content" >
+
+
+
+    <span *ngFor="let marketData of marketData">
+        <span>
+          {{ marketData.symbol }}&nbsp;&nbsp;</span>
+        <span>        </span>        <span>       </span><span> </span><span> </span><span> </span><span> </span><span> </span><span> </span>
+        <span [style.color]="marketData.color">
+          {{ marketData.price | number:'1.2-2' }}&nbsp;&nbsp;</span>
+        <span> </span>
+
+        <span> </span>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <span> </span>
+        <span> </span>
+      </span>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+<!--Hey! This is the original version
+of Simple CSS Waves-->
+
+
+
+  <!--Content before waves-->
+  <div class="inner-header flex">
+  <!--Just the logo.. Don't mind this-->
+
+
+  </div>
+
+  <!--Waves Container-->
+  <div>
+  <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+  viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+  <defs>
+  <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+  </defs>
+  <g class="parallax">
+  <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+  <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+  <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+  <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+  </g>
+  </svg>
+  </div>
+  <!--Waves end-->
+
+  </div>
+  <!--Header ends-->
+
+  <!--Content starts-->
+  <div class="content flex">
+
+  </div>
+  <!--Content ends-->
+
+
+
+
 
 <!-- testo che ruota infinito -->
-<div class="marquee-container mb-5 py-4 bg-light" style="border-top: 1px solid rgb(233, 229, 229); border-bottom: 1px solid rgb(221, 214, 214);" >
+<!-- <div class="marquee-container mb-5 py-4 bg-light" style="border-top: 1px solid rgb(233, 229, 229); border-bottom: 1px solid rgb(221, 214, 214);" >
   <div class="marquee-content" >
 
 
@@ -93,10 +155,8 @@
 
 
 
-
-
   </div>
-</div>
+</div> -->
 
 
 
@@ -116,7 +176,7 @@
       </div>
       <div class="col-md-6">
         <div class="loader mx-5">
-          <svg class="logo" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="400px" height="256px" viewBox="0 0 104.03 104.03" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M9.349,77.009h85.334c2.206,0,4-1.795,4-4V23.54c0-2.207-1.794-4-4-4H9.349c-2.206,0-4,1.793-4,4v49.469 C5.349,75.214,7.143,77.009,9.349,77.009z M9.349,23.54h85.334l0.003,49.469H9.349V23.54z"></path> <path d="M103.021,79.419H1.036c-0.395,0-0.752,0.23-0.918,0.588c-0.184,0.4-0.151,0.844,0.089,1.219 c0.422,0.658,1.128,1.763,17.189,2.563c9.076,0.453,21.174,0.701,34.063,0.701c11.574,0,49.539-0.228,52.212-3.147 c0.261-0.285,0.387-0.64,0.354-1C103.98,79.82,103.545,79.419,103.021,79.419z"></path> <path d="M85.275,36.042c-1.717,0-3.113,1.397-3.113,3.114c0,0.371,0.076,0.724,0.195,1.054l-6.896,8.374 c-0.215-0.047-0.437-0.075-0.664-0.075c-0.721,0-1.377,0.257-1.905,0.67l-7.851-3.926c-0.188-1.541-1.487-2.744-3.077-2.744 c-1.717,0-3.114,1.397-3.114,3.114c0,0.199,0.022,0.393,0.06,0.582l-7.606,6.894c-0.373-0.158-0.783-0.246-1.213-0.246 c-0.467,0-0.906,0.111-1.305,0.297l-9.47-8.601c0.031-0.176,0.055-0.354,0.055-0.539c0-1.717-1.397-3.114-3.114-3.114 c-1.225,0-2.277,0.718-2.785,1.75l-12.086,0.963c-0.552-0.875-1.521-1.463-2.63-1.463c-1.717,0-3.114,1.397-3.114,3.114 c0,1.717,1.397,3.114,3.114,3.114c1.233,0,2.293-0.727,2.797-1.77l12.063-0.962c0.55,0.886,1.523,1.481,2.64,1.481 c0.416,0,0.812-0.085,1.175-0.234l9.583,8.705c-0.016,0.123-0.038,0.246-0.038,0.373c0,1.717,1.397,3.114,3.114,3.114 c1.717,0,3.114-1.397,3.114-3.114c0-0.17-0.024-0.334-0.05-0.498l7.674-6.953c0.354,0.139,0.733,0.222,1.137,0.222 c0.737,0,1.406-0.269,1.94-0.698l7.811,3.906c0.164,1.563,1.476,2.793,3.082,2.793c1.717,0,3.114-1.397,3.114-3.114 c0-0.372-0.076-0.725-0.197-1.057l6.895-8.371c0.216,0.047,0.438,0.075,0.666,0.075c1.718,0,3.114-1.397,3.114-3.114 C88.39,37.44,86.993,36.042,85.275,36.042z M18.756,46.873c-0.892,0-1.614-0.723-1.614-1.614c0-0.891,0.723-1.614,1.614-1.614 c0.891,0,1.614,0.723,1.614,1.614C20.37,46.15,19.647,46.873,18.756,46.873z M36.256,45.623c-0.892,0-1.614-0.723-1.614-1.614 c0-0.891,0.723-1.614,1.614-1.614c0.891,0,1.614,0.723,1.614,1.614C37.87,44.9,37.147,45.623,36.256,45.623z M50.09,57.581 c-0.892,0-1.614-0.723-1.614-1.613c0-0.892,0.723-1.615,1.614-1.615c0.891,0,1.614,0.724,1.614,1.615 C51.704,56.858,50.981,57.581,50.09,57.581z M61.965,47.238c-0.892,0-1.614-0.723-1.614-1.614s0.724-1.614,1.614-1.614 s1.614,0.723,1.614,1.614S62.856,47.238,61.965,47.238z M74.798,53.238c-0.892,0-1.614-0.724-1.614-1.614 c0-0.891,0.724-1.614,1.614-1.614s1.614,0.723,1.614,1.614C76.412,52.515,75.689,53.238,74.798,53.238z M85.275,40.771 c-0.892,0-1.613-0.723-1.613-1.614s0.723-1.614,1.613-1.614c0.892,0,1.614,0.723,1.614,1.614S86.167,40.771,85.275,40.771z"></path> </g> </g> </g></svg>
+          <svg class="logos" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="400px" height="256px" viewBox="0 0 104.03 104.03" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M9.349,77.009h85.334c2.206,0,4-1.795,4-4V23.54c0-2.207-1.794-4-4-4H9.349c-2.206,0-4,1.793-4,4v49.469 C5.349,75.214,7.143,77.009,9.349,77.009z M9.349,23.54h85.334l0.003,49.469H9.349V23.54z"></path> <path d="M103.021,79.419H1.036c-0.395,0-0.752,0.23-0.918,0.588c-0.184,0.4-0.151,0.844,0.089,1.219 c0.422,0.658,1.128,1.763,17.189,2.563c9.076,0.453,21.174,0.701,34.063,0.701c11.574,0,49.539-0.228,52.212-3.147 c0.261-0.285,0.387-0.64,0.354-1C103.98,79.82,103.545,79.419,103.021,79.419z"></path> <path d="M85.275,36.042c-1.717,0-3.113,1.397-3.113,3.114c0,0.371,0.076,0.724,0.195,1.054l-6.896,8.374 c-0.215-0.047-0.437-0.075-0.664-0.075c-0.721,0-1.377,0.257-1.905,0.67l-7.851-3.926c-0.188-1.541-1.487-2.744-3.077-2.744 c-1.717,0-3.114,1.397-3.114,3.114c0,0.199,0.022,0.393,0.06,0.582l-7.606,6.894c-0.373-0.158-0.783-0.246-1.213-0.246 c-0.467,0-0.906,0.111-1.305,0.297l-9.47-8.601c0.031-0.176,0.055-0.354,0.055-0.539c0-1.717-1.397-3.114-3.114-3.114 c-1.225,0-2.277,0.718-2.785,1.75l-12.086,0.963c-0.552-0.875-1.521-1.463-2.63-1.463c-1.717,0-3.114,1.397-3.114,3.114 c0,1.717,1.397,3.114,3.114,3.114c1.233,0,2.293-0.727,2.797-1.77l12.063-0.962c0.55,0.886,1.523,1.481,2.64,1.481 c0.416,0,0.812-0.085,1.175-0.234l9.583,8.705c-0.016,0.123-0.038,0.246-0.038,0.373c0,1.717,1.397,3.114,3.114,3.114 c1.717,0,3.114-1.397,3.114-3.114c0-0.17-0.024-0.334-0.05-0.498l7.674-6.953c0.354,0.139,0.733,0.222,1.137,0.222 c0.737,0,1.406-0.269,1.94-0.698l7.811,3.906c0.164,1.563,1.476,2.793,3.082,2.793c1.717,0,3.114-1.397,3.114-3.114 c0-0.372-0.076-0.725-0.197-1.057l6.895-8.371c0.216,0.047,0.438,0.075,0.666,0.075c1.718,0,3.114-1.397,3.114-3.114 C88.39,37.44,86.993,36.042,85.275,36.042z M18.756,46.873c-0.892,0-1.614-0.723-1.614-1.614c0-0.891,0.723-1.614,1.614-1.614 c0.891,0,1.614,0.723,1.614,1.614C20.37,46.15,19.647,46.873,18.756,46.873z M36.256,45.623c-0.892,0-1.614-0.723-1.614-1.614 c0-0.891,0.723-1.614,1.614-1.614c0.891,0,1.614,0.723,1.614,1.614C37.87,44.9,37.147,45.623,36.256,45.623z M50.09,57.581 c-0.892,0-1.614-0.723-1.614-1.613c0-0.892,0.723-1.615,1.614-1.615c0.891,0,1.614,0.724,1.614,1.615 C51.704,56.858,50.981,57.581,50.09,57.581z M61.965,47.238c-0.892,0-1.614-0.723-1.614-1.614s0.724-1.614,1.614-1.614 s1.614,0.723,1.614,1.614S62.856,47.238,61.965,47.238z M74.798,53.238c-0.892,0-1.614-0.724-1.614-1.614 c0-0.891,0.724-1.614,1.614-1.614s1.614,0.723,1.614,1.614C76.412,52.515,75.689,53.238,74.798,53.238z M85.275,40.771 c-0.892,0-1.613-0.723-1.613-1.614s0.723-1.614,1.613-1.614c0.892,0,1.614,0.723,1.614,1.614S86.167,40.771,85.275,40.771z"></path> </g> </g> </g></svg>
          </div>
       </div>
     </div>
@@ -213,7 +273,7 @@
 
 
 
-<section id="pricing" class="bg-primary py-5 mb-5">
+<section id="pricing" class="bannercontrolpanel py-5 mb-5">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-4 text-center">
@@ -280,7 +340,7 @@
 
     <!-- Aggiunta del pulsante -->
     <div class="text-center mt-4">
-      <button class="btn btn-primary btn-lg" (click)="redirectToRegister()">Get Started</button>
+      <button class="btn bannercontrolpanel border-0 btn-lg" (click)="redirectToRegister()">Get Started</button>
     </div>
   </div>
 
@@ -289,7 +349,7 @@
 <hr class=" m-0 p-0" style="color: grey;">
 <div class="m-5"></div>
 <!-- Contact Section -->
-<section id="contact" class=" bg-primary py-5 ">
+<section id="contact" class=" bannercontrolpanel py-5 ">
   <div class="container">
       <h2 class="text-center text-white">Contact</h2>
       <div class="container">
