--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 
 
 
-<div class="container">
+<div class="container bannercontrolpanel">
   <div class="row">
     <!-- Colonna sinistra con i link -->
     <div class="col-md-2">
