--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <header class="mb-5 sticky-top">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bannercontrolpanel">
     <div class="container-fluid ">
       <a class="navbar-brand" [routerLink]="['/dashboard']"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 30px; max-height: 30px;">EPICTRADING</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
