--- a/Epic_Trading/src/app/components/navbar/navbar.component.scss
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,15 @@
+.bannercontrolpanel{
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%)!important;
+  color:white!important;
+}
+
+
+
+
+
+
+
+
 
 #nav-avatar {
   left: 60px;
