--- a/Epic_Trading/src/app/auth/register/register.component.html
+++ b/Epic_Trading/src/app/auth/register/register.component.html
@@ -41,10 +41,9 @@
   </div>
 </div> -->
 
-
-
-<div class="form-box mx-auto mt-5">
-  <form class="form">
+<div class="bannercontrolpanel ">
+<div class="form-box mx-auto  ">
+  <form class="form ">
     <div class=" title container-fluid text-center ">
       <a class="navbar-brand" href="/controlPanel"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 1em;">EPICTRADING</span></a>
       </div>
@@ -63,3 +62,4 @@
     <p>Have an account? <a href="/login">Log in</a> </p>
   </div>
   </div>
+</div>
