add color text landing page

--- a/Epic_Trading/src/app/auth/login/login.component.html
+++ b/Epic_Trading/src/app/auth/login/login.component.html
@@ -27,7 +27,8 @@
 <!-- <div class=" container-fluid text-center mt-5 ">
 <a class="navbar-brand" href="#"><img src="../../../assets/logoepicdtrading.png" alt="" style="max-width: 300px; max-height: 30px;"><span style="font-size: 2em;">EPICTRADING</span></a>
 </div> -->
-<div class="form-box mx-auto mt-5">
+<div class="bannercontrolpanel ">
+<div class="form-box mx-auto ">
 
   <form class="form">
     <div class=" title container-fluid text-center ">
@@ -46,3 +47,4 @@
     <p>Don't have an account? <a href="/register">Sign up</a> </p>
   </div>
   </div>
+</div>
