--- a/Epic_Trading/src/app/auth/login/login.component.scss
+++ b/Epic_Trading/src/app/auth/login/login.component.scss
@@ -4,6 +4,7 @@
   overflow: hidden;
   border-radius: 16px;
   color: #010101;
+  transform: translateY(40%);
 }
 
 .form {
@@ -66,7 +67,7 @@
 
 /*Button*/
 .form button {
-  background-color: #0066ff;
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
   color: #fff;
   border: 0;
   border-radius: 24px;
@@ -79,4 +80,12 @@
 
 .form button:hover {
   background-color: #005ce6;
+}
+
+
+
+.bannercontrolpanel{
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+  color:white;
+  height: 100vh;
 }
