--- a/Epic_Trading/src/app/components/control-panel/control-panel.component.html
+++ b/Epic_Trading/src/app/components/control-panel/control-panel.component.html
@@ -170,13 +170,13 @@ of Simple CSS Waves-->
   <div class="container text-center">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <h2 class="text-center">Experience Seamless Trading:</h2>
+        <h2 class="text-center bannercontrolpaneltext" >Experience Seamless Trading:</h2>
         <p>
           EpicTrading offers an intuitive and user-friendly interface, ensuring that you can navigate the financial markets with ease. <br> Whether you're trading stocks, currencies, or commodities, <br> our platform provides a seamless and efficient experience.</p>
       </div>
       <div class="col-md-6">
         <div class="loader mx-5">
-          <svg class="logos" fill="#000000" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="400px" height="256px" viewBox="0 0 104.03 104.03" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M9.349,77.009h85.334c2.206,0,4-1.795,4-4V23.54c0-2.207-1.794-4-4-4H9.349c-2.206,0-4,1.793-4,4v49.469 C5.349,75.214,7.143,77.009,9.349,77.009z M9.349,23.54h85.334l0.003,49.469H9.349V23.54z"></path> <path d="M103.021,79.419H1.036c-0.395,0-0.752,0.23-0.918,0.588c-0.184,0.4-0.151,0.844,0.089,1.219 c0.422,0.658,1.128,1.763,17.189,2.563c9.076,0.453,21.174,0.701,34.063,0.701c11.574,0,49.539-0.228,52.212-3.147 c0.261-0.285,0.387-0.64,0.354-1C103.98,79.82,103.545,79.419,103.021,79.419z"></path> <path d="M85.275,36.042c-1.717,0-3.113,1.397-3.113,3.114c0,0.371,0.076,0.724,0.195,1.054l-6.896,8.374 c-0.215-0.047-0.437-0.075-0.664-0.075c-0.721,0-1.377,0.257-1.905,0.67l-7.851-3.926c-0.188-1.541-1.487-2.744-3.077-2.744 c-1.717,0-3.114,1.397-3.114,3.114c0,0.199,0.022,0.393,0.06,0.582l-7.606,6.894c-0.373-0.158-0.783-0.246-1.213-0.246 c-0.467,0-0.906,0.111-1.305,0.297l-9.47-8.601c0.031-0.176,0.055-0.354,0.055-0.539c0-1.717-1.397-3.114-3.114-3.114 c-1.225,0-2.277,0.718-2.785,1.75l-12.086,0.963c-0.552-0.875-1.521-1.463-2.63-1.463c-1.717,0-3.114,1.397-3.114,3.114 c0,1.717,1.397,3.114,3.114,3.114c1.233,0,2.293-0.727,2.797-1.77l12.063-0.962c0.55,0.886,1.523,1.481,2.64,1.481 c0.416,0,0.812-0.085,1.175-0.234l9.583,8.705c-0.016,0.123-0.038,0.246-0.038,0.373c0,1.717,1.397,3.114,3.114,3.114 c1.717,0,3.114-1.397,3.114-3.114c0-0.17-0.024-0.334-0.05-0.498l7.674-6.953c0.354,0.139,0.733,0.222,1.137,0.222 c0.737,0,1.406-0.269,1.94-0.698l7.811,3.906c0.164,1.563,1.476,2.793,3.082,2.793c1.717,0,3.114-1.397,3.114-3.114 c0-0.372-0.076-0.725-0.197-1.057l6.895-8.371c0.216,0.047,0.438,0.075,0.666,0.075c1.718,0,3.114-1.397,3.114-3.114 C88.39,37.44,86.993,36.042,85.275,36.042z M18.756,46.873c-0.892,0-1.614-0.723-1.614-1.614c0-0.891,0.723-1.614,1.614-1.614 c0.891,0,1.614,0.723,1.614,1.614C20.37,46.15,19.647,46.873,18.756,46.873z M36.256,45.623c-0.892,0-1.614-0.723-1.614-1.614 c0-0.891,0.723-1.614,1.614-1.614c0.891,0,1.614,0.723,1.614,1.614C37.87,44.9,37.147,45.623,36.256,45.623z M50.09,57.581 c-0.892,0-1.614-0.723-1.614-1.613c0-0.892,0.723-1.615,1.614-1.615c0.891,0,1.614,0.724,1.614,1.615 C51.704,56.858,50.981,57.581,50.09,57.581z M61.965,47.238c-0.892,0-1.614-0.723-1.614-1.614s0.724-1.614,1.614-1.614 s1.614,0.723,1.614,1.614S62.856,47.238,61.965,47.238z M74.798,53.238c-0.892,0-1.614-0.724-1.614-1.614 c0-0.891,0.724-1.614,1.614-1.614s1.614,0.723,1.614,1.614C76.412,52.515,75.689,53.238,74.798,53.238z M85.275,40.771 c-0.892,0-1.613-0.723-1.613-1.614s0.723-1.614,1.613-1.614c0.892,0,1.614,0.723,1.614,1.614S86.167,40.771,85.275,40.771z"></path> </g> </g> </g></svg>
+          <svg class="logos " fill="" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="400px" height="256px" viewBox="0 0 104.03 104.03" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M9.349,77.009h85.334c2.206,0,4-1.795,4-4V23.54c0-2.207-1.794-4-4-4H9.349c-2.206,0-4,1.793-4,4v49.469 C5.349,75.214,7.143,77.009,9.349,77.009z M9.349,23.54h85.334l0.003,49.469H9.349V23.54z"></path> <path d="M103.021,79.419H1.036c-0.395,0-0.752,0.23-0.918,0.588c-0.184,0.4-0.151,0.844,0.089,1.219 c0.422,0.658,1.128,1.763,17.189,2.563c9.076,0.453,21.174,0.701,34.063,0.701c11.574,0,49.539-0.228,52.212-3.147 c0.261-0.285,0.387-0.64,0.354-1C103.98,79.82,103.545,79.419,103.021,79.419z"></path> <path d="M85.275,36.042c-1.717,0-3.113,1.397-3.113,3.114c0,0.371,0.076,0.724,0.195,1.054l-6.896,8.374 c-0.215-0.047-0.437-0.075-0.664-0.075c-0.721,0-1.377,0.257-1.905,0.67l-7.851-3.926c-0.188-1.541-1.487-2.744-3.077-2.744 c-1.717,0-3.114,1.397-3.114,3.114c0,0.199,0.022,0.393,0.06,0.582l-7.606,6.894c-0.373-0.158-0.783-0.246-1.213-0.246 c-0.467,0-0.906,0.111-1.305,0.297l-9.47-8.601c0.031-0.176,0.055-0.354,0.055-0.539c0-1.717-1.397-3.114-3.114-3.114 c-1.225,0-2.277,0.718-2.785,1.75l-12.086,0.963c-0.552-0.875-1.521-1.463-2.63-1.463c-1.717,0-3.114,1.397-3.114,3.114 c0,1.717,1.397,3.114,3.114,3.114c1.233,0,2.293-0.727,2.797-1.77l12.063-0.962c0.55,0.886,1.523,1.481,2.64,1.481 c0.416,0,0.812-0.085,1.175-0.234l9.583,8.705c-0.016,0.123-0.038,0.246-0.038,0.373c0,1.717,1.397,3.114,3.114,3.114 c1.717,0,3.114-1.397,3.114-3.114c0-0.17-0.024-0.334-0.05-0.498l7.674-6.953c0.354,0.139,0.733,0.222,1.137,0.222 c0.737,0,1.406-0.269,1.94-0.698l7.811,3.906c0.164,1.563,1.476,2.793,3.082,2.793c1.717,0,3.114-1.397,3.114-3.114 c0-0.372-0.076-0.725-0.197-1.057l6.895-8.371c0.216,0.047,0.438,0.075,0.666,0.075c1.718,0,3.114-1.397,3.114-3.114 C88.39,37.44,86.993,36.042,85.275,36.042z M18.756,46.873c-0.892,0-1.614-0.723-1.614-1.614c0-0.891,0.723-1.614,1.614-1.614 c0.891,0,1.614,0.723,1.614,1.614C20.37,46.15,19.647,46.873,18.756,46.873z M36.256,45.623c-0.892,0-1.614-0.723-1.614-1.614 c0-0.891,0.723-1.614,1.614-1.614c0.891,0,1.614,0.723,1.614,1.614C37.87,44.9,37.147,45.623,36.256,45.623z M50.09,57.581 c-0.892,0-1.614-0.723-1.614-1.613c0-0.892,0.723-1.615,1.614-1.615c0.891,0,1.614,0.724,1.614,1.615 C51.704,56.858,50.981,57.581,50.09,57.581z M61.965,47.238c-0.892,0-1.614-0.723-1.614-1.614s0.724-1.614,1.614-1.614 s1.614,0.723,1.614,1.614S62.856,47.238,61.965,47.238z M74.798,53.238c-0.892,0-1.614-0.724-1.614-1.614 c0-0.891,0.724-1.614,1.614-1.614s1.614,0.723,1.614,1.614C76.412,52.515,75.689,53.238,74.798,53.238z M85.275,40.771 c-0.892,0-1.613-0.723-1.613-1.614s0.723-1.614,1.613-1.614c0.892,0,1.614,0.723,1.614,1.614S86.167,40.771,85.275,40.771z"></path> </g> </g> </g></svg>
          </div>
       </div>
     </div>
@@ -215,8 +215,8 @@ of Simple CSS Waves-->
         </div>
       </div>
       <div class="col-md-6">
-        <h2>Diverse Market Offerings:</h2>
-        <p>
+        <h2 class="bannercontrolpaneltext">Diverse Market Offerings:</h2>
+        <p >
           Explore a diverse range of financial instruments, from stocks and cryptocurrencies to forex and commodities. With EpicTrading, you have access to a wide spectrum of markets, allowing you to diversify your portfolio and optimize your trading strategy.
         </p>
       </div>
@@ -231,16 +231,19 @@ of Simple CSS Waves-->
 <!-- card section -->
 <section id="features" class="py-5 mb-5">
   <div class="container text-center">
-    <h2 class="mb-5">Here are a few reasons why <br>
+    <h2 class="mb-5 bannercontrolpaneltext">Here are a few reasons why <br>
       you should choose EpicTrading</h2>
     <div class="row justify-content-center">
       <div class="col-md-4">
         <div class="card h-100">
-          <img src="../../../assets/managment.svg" class="card-img-top mx-auto mt-3"  alt="Immagine 1" style="max-width: 110px; max-height: 110px">
+          <img src="../../../assets/managment.svg" class="card-img-top mx-auto mt-3  "  alt="Immagine 1" style="max-width: 110px; max-height: 110px ">
           <div class="card-body">
-            <h5 class="card-title">Educational Resources</h5>
+            <h5 class="card-title  bannercontrolpaneltext">Educational Resources</h5>
             <p class="card-text">
               We believe in the power of knowledge. EpicTrading offers a wealth of educational resources, including webinars, tutorials, and market insights. Whether you're a beginner or a seasoned trader, our educational materials will help you sharpen your skills and make informed decisions.</p>
+
+
+
           </div>
         </div>
       </div>
@@ -248,7 +251,7 @@ of Simple CSS Waves-->
         <div class="card h-100">
           <img src="../../../assets/stroge.svg" class="card-img-top mx-auto mt-3"  alt="Immagine 2" style="max-width: 110px; max-height: 110px">
           <div class="card-body">
-            <h5 class="card-title"> Secure and Reliable</h5>
+            <h5 class="card-title  bannercontrolpaneltext"> Secure and Reliable</h5>
             <p class="card-text">
               Your security is our top priority. EpicTrading employs cutting-edge security measures to safeguard your funds and personal information. Trade with confidence, knowing that your assets are protected by the latest security protocols.</p>
           </div>
@@ -258,7 +261,7 @@ of Simple CSS Waves-->
         <div class="card h-100">
           <img src="../../../assets/backup.svg" class="card-img-top mx-auto mt-3"  alt="Immagine 3" style="max-width: 110px; max-height: 110px">
           <div class="card-body">
-            <h5 class="card-title">Advanced Trading Tools</h5>
+            <h5 class="card-title  bannercontrolpaneltext">Advanced Trading Tools</h5>
             <p class="card-text">
               Gain a competitive edge with our suite of advanced trading tools. Access real-time market data, advanced charting, and technical analysis to make informed trading decisions. Our platform empowers you to stay ahead of market trends and execute trades with precision.</p>
           </div>
@@ -298,13 +301,13 @@ of Simple CSS Waves-->
 <!-- card section -->
 <section id="features" class="py-5 mb-5">
   <div class="container text-center">
-    <h2 class="mb-5">Get started in a few steps</h2>
+    <h2 class="mb-5  bannercontrolpaneltext">Get started in a few steps</h2>
     <div class="row justify-content-center">
       <div class="col-md-4">
         <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
           <img src="../../../assets/user.svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
-            <h5 class="card-title">Create yout account</h5>
+            <h5 class="card-title  bannercontrolpaneltext">Create yout account</h5>
           </div>
         </div>
       </div>
@@ -312,7 +315,7 @@ of Simple CSS Waves-->
         <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
           <img src="../../../assets/bank.svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
-            <h5 class="card-title">Link your bank account</h5>
+            <h5 class="card-title  bannercontrolpaneltext">Link your bank account</h5>
           </div>
         </div>
       </div>
@@ -320,7 +323,7 @@ of Simple CSS Waves-->
         <div class="card text-center"> <!-- Aggiungi la classe text-center alla card per centrare il suo contenuto -->
           <img src="../../../assets/trade .svg" class="card-img-top mx-auto mt-3" alt="Immagine 3" style="max-width: 90px; max-height: 90px">
           <div class="card-body">
-            <h5 class="card-title">Start buying and selling</h5>
+            <h5 class="card-title  bannercontrolpaneltext">Start buying and selling</h5>
           </div>
         </div>
       </div>
