--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.scss
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.scss
@@ -11,6 +11,14 @@
   color:white!important;
 }
 
+.bannercontrolpaneltext{
+  background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
+
 
 .loader:after {
   content: '$';
