add some test  graphic to fix

--- a/Epic_Trading/src/app/auth/register/register.component.html
+++ b/Epic_Trading/src/app/auth/register/register.component.html
@@ -59,7 +59,7 @@
       <button (click)="register()" type="submit" class="btn btn-primary">Sign up</button>
   </form>
   <div class="form-section">
-    <p>Have an account? <a href="/login">Log in</a> </p>
+    <p>Have an account? <a routerLink="/login" routerLinkActive="active">Log in</a> </p>
   </div>
   </div>
 </div>
