--- a/Epic_Trading/src/app/auth/login/login.component.html
+++ b/Epic_Trading/src/app/auth/login/login.component.html
@@ -44,7 +44,7 @@
       <button (click)="login()" type="submit" class="btn btn-primary">Log in</button>
   </form>
   <div class="form-section">
-    <p>Don't have an account? <a href="/register">Sign up</a> </p>
+    <p>Don't have an account? <a routerLink="/register" routerLinkActive="active">Sign up</a> </p>
   </div>
   </div>
 </div>
