test form utente border - 0

--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -152,7 +152,7 @@
                   </div>
                   <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="currentUserInfo.email" (ngModelChange)="onFieldChange()">
+                    <input type="email" class="form-control border-0 bg-white" id="email" name="email" [(ngModel)]="currentUserInfo.email" (ngModelChange)="onFieldChange()">
                   </div>
                   <div class="form-group">
                     <label for="phoneNumber">Numero di Telefono</label>
