--- a/Epic_Trading/src/app/components/market/market.component.html
+++ b/Epic_Trading/src/app/components/market/market.component.html
@@ -46,7 +46,7 @@
             </div>
           </td>
           <td >
-            <button (click)="createTransaction(stock.id, stock.quantity); stock.quantity = null!" class="btn btn-primary">Acquista</button>
+            <button (click)="createTransaction(stock.id, stock.quantity);" class="btn btn-primary">Acquista</button>
 
           </td>
           <td>
@@ -66,7 +66,7 @@
 <!-- tesr -->
 
 <!-- about -->
-<div class="about">
+<!-- <div class="about">
   <a class="bg_links social portfolio" href="https://www.rafaelalucas.com" target="_blank">
      <span class="icon"></span>
   </a>
@@ -77,10 +77,10 @@
      <span class="icon"></span>
   </a>
   <a class="bg_links logo"></a>
-</div>
+</div> -->
 <!-- end about -->
 
-   <nav>
+   <!-- <nav>
        <div class="menu">
            <p class="website_name">LOGO</p>
            <div class="menu_links">
@@ -140,7 +140,7 @@
            </div>
 
        </div>
-   </section>
+   </section> -->
 
 
 
