--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
           <!-- Colonna centrale per il portafoglio -->
           <div class="row mb-3">
             <div class="col-md-12 d-flex justify-content-start">
-              <h2>Balance: {{ currentUserInfo.balance| currency:'USD':'symbol-narrow':'1.2-2' }}</h2>
+              <h2  [@countTo]="currentNumber > 0 ? 'in' : 'void'">Balance: {{ currentNumber| currency:'USD':'symbol-narrow':'1.2-2' }}</h2>
               <div class="loader pt-1 mx-2"></div>
             </div>
           </div>
