add market analyst

--- a/Epic_Trading/src/app/components/market-analyst/market-analyst.component.scss
+++ b/Epic_Trading/src/app/components/market-analyst/market-analyst.component.scss
@@ -2,6 +2,10 @@
 
 
 
+.bannercontrolpanel{
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%)!important;
+  color:white!important;
+}
 
 
 
