--- a/Epic_Trading/src/app/components/market/market.component.html
+++ b/Epic_Trading/src/app/components/market/market.component.html
@@ -21,6 +21,8 @@
 <div *ngIf="!showSpinner">
 <div class="container mt-4 ">
   <h2>Market Stock Actions</h2>
+  <button (click)="nextPage()">NEXT</button>
+  <button (click)="previousPage()">PREVIOUS</button>
   <div class="table-responsive">
     <table class="table bannercontrolpanel">
       <thead>
