--- a/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
+++ b/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
@@ -1,10 +1,13 @@
-<div class="row">
-  <div class="col-md-12">
+<!-- <div class="row">
+  <div class="col-md-12"> -->
     <!-- I tuoi div esistenti a sinistra -->
+    <!-- <div>{{newmarketData.name}}</div>
+    <div>{{newmarketData.price}}</div>
+    <div>{{newmarketData.symbol}}</div>
     <div  id="chartContainer"></div>
     <div id="legendContainer"></div>
     <div id="volumeChartContainer"></div>
-  </div>
+  </div> -->
 
 <!-- <div class="col-md-4 " style="font-size: 15px;">
   <h2>Market Stock Actions</h2>
@@ -41,7 +44,7 @@
     </table>
   </div>
 </div> -->
-</div>
+<!-- </div>
 <div class="container mt-4">
   <h2>Historical Prices</h2>
   <div class="table-responsive">
@@ -60,7 +63,7 @@
       </tbody>
     </table>
   </div>
-</div>
+</div> -->
 
 
 
@@ -94,9 +97,10 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+                        <h1 class="h3 mb-0 text-gray-800 text-center mt-3">STOCK ANALYST</h1>
+                        <a routerLink="/dashboard" routerLinkActive="active" class="d-none d-sm-inline-block btn btn-sm  shadow-sm bannercontrolpanel"><i
+                                class=" fas fa-download fa-sm text-white-50"></i> Dashboard</a>
+
                     </div>
 
                     <!-- Content Row -->
@@ -108,9 +112,9 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Earnings (Monthly)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                                            <div class="text-s font-weight-bold text-primary text-uppercase mb-1">
+                                                Name</div>
+                                            <div class="h3 mb-0 font-weight-bold text-gray-800">{{newmarketData.name}}</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -125,11 +129,11 @@
                             <div class="card border-left-success shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Earnings (Annual)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
-                                        </div>
+                                      <div class="col mr-2">
+                                        <div class="text-s font-weight-bold text-primary text-uppercase mb-1">
+                                            Price</div>
+                                        <div class="h3 mb-0 font-weight-bold text-gray-800">{{newmarketData.price| currency:'USD':'symbol-narrow':'1.2-2'}}</div>
+                                    </div>
                                         <div class="col-auto">
                                             <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
                                         </div>
@@ -143,7 +147,8 @@
                             <div class="card border-left-info shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
+                                      <!-- PROGRESS BAR  -->
+                                        <!-- <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Tasks
                                             </div>
                                             <div class="row no-gutters align-items-center">
@@ -158,7 +163,12 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div> -->
+                                        <div class="col mr-2">
+                                          <div class="text-s font-weight-bold text-primary text-uppercase mb-1">
+                                              SYMBOL</div>
+                                          <div class="h3 mb-0 font-weight-bold text-gray-800">{{newmarketData.symbol}}</div>
+                                      </div>
                                         <div class="col-auto">
                                             <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
                                         </div>
@@ -172,11 +182,11 @@
                             <div class="card border-left-warning shadow h-100 py-2">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Pending Requests</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
-                                        </div>
+                                      <div class="col mr-2">
+                                        <div class="text-s font-weight-bold text-primary text-uppercase mb-1">
+                                            VOLUME</div>
+                                        <div class="h3 mb-0 font-weight-bold text-gray-800">{{newmarketData.volume}}</div>
+                                    </div>
                                         <div class="col-auto">
                                             <i class="fas fa-comments fa-2x text-gray-300"></i>
                                         </div>
@@ -195,8 +205,8 @@
                             <div class="card shadow mb-4">
                                 <!-- Card Header - Dropdown -->
                                 <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
+                                    class=" bannercontrolpanel  card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-white">Chart Overview</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -214,7 +224,7 @@
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
-                                  <div class="container mt-4">
+                                  <!-- <div class="container mt-4">
                                     <h2>Historical Prices</h2>
                                     <div class="table-responsive">
                                       <table class="table">
@@ -231,26 +241,35 @@
                                           </tr>
                                         </tbody>
                                       </table>
+
                                     </div>
-                                  </div>
+                                  </div> -->
                                     <!-- <div class="chart-area">
                                         <canvas id="myAreaChart">
 
                                         </canvas>
                                     </div> -->
-                                </div>
+
+                                        <!-- I tuoi div esistenti a sinistra -->
+                                        <div>{{newmarketData.name}}</div>
+                                        <div>{{newmarketData.price}}</div>
+                                        <div>{{newmarketData.symbol}}</div>
+                                        <div  id="chartContainer"></div>
+                                        <div id="legendContainer"></div>
+                                        <div id="volumeChartContainer"></div>
+
                             </div>
                         </div>
-
+</div>
                         <!-- Pie Chart -->
                         <div class="col-xl-4 col-lg-5">
                             <div class="card shadow mb-4">
                                 <!-- Card Header - Dropdown -->
                                 <div
-                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Revenue Sources</h6>
+                                    class=" bannercontrolpanel card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-white">Historical Price</h6>
                                     <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                                        <a class="dropdown-toggle" href="" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                                         </a>
@@ -266,11 +285,33 @@
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
-                                  <h2>ciao</h2>
+                                    <div class="container mt-4">
+                                    <div class="table-responsive">
+                                      <table class="table">
+                                        <thead>
+                                          <tr>
+                                            <th scope="col">Date</th>
+                                            <th scope="col">Price</th>
+                                          </tr>
+                                        </thead>
+                                        <tbody>
+                                          <ng-container *ngFor="let historicalPrice of historicalPrices; let i = index">
+                                            <tr *ngIf="showAllHistoricalPrices || i < numberOfItemsToShow">
+                                              <td>{{ historicalPrice.dateTime | date:'yyyy-MM-dd ' }}</td>
+                                              <td>{{ historicalPrice.price | currency:'USD':'symbol-narrow':'1.2-2' }}</td>
+                                            </tr>
+                                          </ng-container>
+                                          <button class="btn" (click)="showAllHistoricalPrices = !showAllHistoricalPrices">
+                                            {{ showAllHistoricalPrices ? 'Mostra meno' : 'Mostra tutti' }}
+                                          </button>
 
-                                    <div class="chart-pie pt-4 pb-2">
-                                        <canvas id="myPieChart"></canvas>
+                                        </tbody>
+
+                                      </table>
+
                                     </div>
+                                  </div>
+
                                     <div class="mt-4 text-center small">
                                         <span class="mr-2">
                                             <i class="fas fa-circle text-primary"></i> Direct
