--- a/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
+++ b/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
@@ -124,6 +124,8 @@
                             </div>
                         </div>
 
+
+
                         <!-- Earnings (Monthly) Card Example -->
                         <div class="col-xl-3 col-md-6 mb-4">
                             <div class="card border-left-success shadow h-100 py-2">
@@ -251,9 +253,16 @@
                                     </div> -->
 
                                         <!-- I tuoi div esistenti a sinistra -->
+                                        <div class="d-flex justify-content-between">
+                                        <div>
                                         <div>{{newmarketData.name}}</div>
                                         <div>{{newmarketData.price}}</div>
                                         <div>{{newmarketData.symbol}}</div>
+                                      </div>
+                                      <div>
+                                        <button class="btn btn-success px-5 py-2">BUY</button>
+                                      </div>
+                                      </div>
                                         <div  id="chartContainer"></div>
                                         <div id="legendContainer"></div>
                                         <div id="volumeChartContainer"></div>
